WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170197
[iOS] Crash in -[WebPreviewLoader failed] when running http/tests/multipart/policy-ignore-crash.php
https://bugs.webkit.org/show_bug.cgi?id=170197
Summary
[iOS] Crash in -[WebPreviewLoader failed] when running http/tests/multipart/p...
Andy Estes
Reported
2017-03-28 13:55:10 PDT
[iOS] Crash in -[WebPreviewLoader failed] when running http/tests/multipart/policy-ignore-crash.php
Attachments
Patch
(3.40 KB, patch)
2017-03-28 14:00 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(1.02 MB, application/zip)
2017-03-28 15:42 PDT
,
Build Bot
no flags
Details
Patch
(3.94 KB, patch)
2017-03-28 16:05 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-03-28 13:56:03 PDT
rdar://problem/30314067
Andy Estes
Comment 2
2017-03-28 14:00:50 PDT
Created
attachment 305638
[details]
Patch
Build Bot
Comment 3
2017-03-28 15:42:53 PDT
Comment on
attachment 305638
[details]
Patch
Attachment 305638
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3429338
New failing tests: http/tests/multipart/policy-ignore-crash.php
Build Bot
Comment 4
2017-03-28 15:42:56 PDT
Created
attachment 305655
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Andy Estes
Comment 5
2017-03-28 16:05:21 PDT
Created
attachment 305659
[details]
Patch
WebKit Commit Bot
Comment 6
2017-03-28 16:50:59 PDT
Comment on
attachment 305659
[details]
Patch Clearing flags on attachment: 305659 Committed
r214506
: <
http://trac.webkit.org/changeset/214506
>
WebKit Commit Bot
Comment 7
2017-03-28 16:51:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug